cargo-features = ["trim-paths"]

[package]
name = "dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "process", "signal"], default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
trim-paths = true
